deploy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kttm-ingress
  namespace: kttm-system
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kttm-server
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kttm-web
                port:
                  number: 80
